using namespaced paths for create
